--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/pastebin
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
+
+
+server.error.whitelabel.enabled=true
