refactoring cloud storage package

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,8 @@ spring.devtools.livereload.enabled=true
 spring.thymeleaf.cache=false
 
 
-server.error.whitelabel.enabled=true
+server.error.whitelabel.enabled=false
+
+cloud.storage.endpoint=https://hb.ru-msk.vkcs.cloud
+cloud.storage.region=msk
+cloud.storage.bucket=CloudStorageManager
